# libmath

./: .clang-tidy  CMakeLists.txt  README.md
include/: libmath.h
src/: libmath.cpp
